# haptics2023

./: README.md
notebooks/: avro_reader.ipynb  cues_export_cpp.ipynb  frequency.ipynb  gesture_cue_plots.ipynb  gesture_cue_rendering.ipynb  pattern_rendering.ipynb
scripts/: emit.py  gesture_cue_renderer.py  gesture_cues.py  run.py  run_cue.py  run_cue2.py
src/: AmplitudeModulation_Focus.cpp  CMakeLists.txt  ExampleConnection.cpp  PollingSample.cpp  TimePointStreaming_Forcefield.cpp  accelerometer.hpp  coordinate_system.hpp  gesture_cue.hpp  key_state.hpp  main.cpp  moving_average.hpp  python_elicit.cpp  tqueue.hpp  track.cpp  tracker.cpp  tracker.h  tracking_emitter.cpp  tracking_emitter.hpp  tracking_event.hpp  tracking_logger.cpp  tracking_logger.hpp  tracking_window.cpp  tracking_window.hpp  user_data.cpp  user_data.hpp  utils.cpp  utils.hpp
